--- a/index.html
+++ b/index.html
@@ -8,13 +8,19 @@
 <body>
 
 <div>
-    <div >
-        <img style="width: 4.5%;padding-top: 0.1%" src="img/logiin.png">
+    <div style="background: #f7f7f7" >
+        <img style="width: 4.5%;padding-top: 0.1%;  margin-bottom: 3%;" src="img/logiin.png">
         <p style="text-align: center;display: inline-block;font-size: 120%;position: absolute;padding-top: 1.3%;
   padding-left: 0.7%;" >حساب کاربری</p>
 
-        <input id="search"  style="text-align: right" dir="rtl"  placeholder="نام کالا,برند و یا دسته مورد نظر خود را جستجو کنید..." type="text">
+        <input id="search"  style="text-align: right" dir="rtl"  placeholder="نام کالا,برند و یا دسته مورد نظر خود را جستجو کنید..." type="text" >
+        
+        <img id="logo_market" src="img/open-uri20150527-11-j5oul2.gif">
+
 </div>
+</div>
+<div>
+
 </div>
 </body>
 </html>
