--- a/index.html
+++ b/index.html
@@ -19,8 +19,56 @@
 
 </div>
 </div>
-<div>
+<nav>
+<div dir="rtl">
+    <ul>
+        <li>
+            <a>
+                کالای دیجیتال
+            </a>
+        </li>
+    </ul>
 
+    <ul>
+        <li>
+            <a>
+
+            </a>
+        </li>
+    </ul>
+
+    <ul>
+        <li>
+            <a>
+
+            </a>
+        </li>
+    </ul>
+
+    <ul>
+        <li>
+            <a>
+
+            </a>
+        </li>
+    </ul>
+
+    <ul>
+        <li>
+            <a>
+
+            </a>
+        </li>
+    </ul>
+
+    <ul>
+        <li>
+            <a>
+
+            </a>
+        </li>
+    </ul>
 </div>
+</nav>
 </body>
 </html>
